fixed 'address' element layout issue in results list

--- a/src/Web/Sfa.Eds.Das.Web/Content/src/styles/custom-elements/_results.scss
+++ b/src/Web/Sfa.Eds.Das.Web/Content/src/styles/custom-elements/_results.scss
@@ -13,5 +13,5 @@
 .result-data-list {
     @include data-list(40, true, true);
 
-    .address { max-width: none; }
+    .address { max-width: none; width: 100%; }
 }
